--- a/imports/ui/pages/notfound/notFound.html
+++ b/imports/ui/pages/notfound/notFound.html
@@ -4,12 +4,13 @@
             <h1 class="text-center">
                 <span>¯\_(ツ)_/¯</span>
             </h1>
-            <p>{{i18n "pages.notFound.title"}}</p>
+            <p class="text-center">{{i18n "pages.notFound.title"}}</p>
         </div>
 
         <div class="card">
             <div class="card-body">
-                <a href="{{route 'root'}}">{{i18n "routes.root"}}</a>
+                <i class="fas fa fa-fa fa-caret-left"></i>
+                <a href="{{route 'root'}}">{{i18n "pages.notFound.backToRoot"}}</a>
             </div>
         </div>
     </div>
