client startup implemented

--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,35 @@
 <head>
-  <title>leaonline-teacher</title>
+    <meta charset="utf-8">
+    <meta name="application-name" content="otue.lea">
+    <meta name="description" content="Online Testumgebung zur Literalitätsentwicklung von Arbeitskräften">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=5, minimum-scale=-5"/>
+    <meta name="theme-color" content="#FF00AA">
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'"/>
+    <link rel="preconnect" href="http://www.ifeb.uni-bremen.de" crossorigin>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" type="image/png" href="/icon/favicon.png?v1" sizes="16x16 32x32 64x64">
+    <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-touch-icon-precomposed.png">
+    <link rel="fluid-icon" href="/icon/favicon.png?v1" title="otu.lea icon">
+    <title>leaonline-teacher</title>
+    <noscript>Sorry, your browser does not support JavaScript!</noscript>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
+<noscript>Sorry, your browser does not support JavaScript!</noscript>
+<style>
+    @font-face {
+        font-family: 'Semikolon';
+        font-display: fallback;
+        src: local('SemikolonPlus-Regular.otf'), url({{url '/fonts/SemikolonPlus-Regular.otf'}});
+    }
+</style>
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
+<template name="main-render-target">
+    <wrapper class="container-fluid d-flex flex-column">
+        <main class="w-100 main-container flex-fill">
+            {{> yield}}
+        </main>
+    </wrapper>
 </template>
