ui basic layout implemented

--- a/imports/ui/pages/logout/logout.html
+++ b/imports/ui/pages/logout/logout.html
@@ -20,7 +20,7 @@
     {{#if hasError}}
         {{#proxy template="alert" loaded=loadComplete type="danger"}}
             <h1>
-                <span>{{i18n "common.error"}}</span>
+                <span>{{i18n "error.occurred"}}</span>
             </h1>
         {{/proxy}}
     {{/if}}
