updated css for course overview page and sidebar

--- a/imports/ui/pages/myclasses/myClasses.html
+++ b/imports/ui/pages/myclasses/myClasses.html
@@ -3,8 +3,13 @@
 <!--        {{#each courseCategories}}-->
 <!--            {{text}}-->
 <!--        {{/each}}-->
-        <h3><span class="badge badge-secondary ml-5 bg-white text-secondary course-badge">Running Courses</span></h3>
-        {{#listgroup flush=true class="mb-5 rounded-lg"}}
+
+        <div class="row d-flex justify-content-end align-items-center mr-1">
+            {{> button label="Add New Course" colortype="warning" size="sm"}}
+        </div>
+
+        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">Running Courses</span></h4>
+        {{#listgroup flush=true class="mb-5 border-0 rounded-lg shadow-sm" style=" overflow: hidden;"}}
             {{#if runningCourses}}
                 {{#each runningCourses}}
                     {{> cardItems}}
@@ -14,8 +19,8 @@
             {{/if}}
         {{/listgroup}}
 
-        <h3><span class="badge badge-secondary ml-5 bg-white text-secondary course-badge">Completed Courses</span></h3>
-        {{#listgroup flush=true class="mb-5" style="box-shadow: 2px 5px 5px #888888;"}}
+        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">Completed Courses</span></h4>
+        {{#listgroup flush=true class="mb-5 border-0 rounded-lg shadow-sm" style=" overflow: hidden;"}}
             {{#if completedCourses}}
                 {{#each completedCourses}}
                     {{> cardItems}}
@@ -25,8 +30,8 @@
             {{/if}}
         {{/listgroup}}
 
-        <h3><span class="badge badge-secondary ml-5 bg-white text-secondary course-badge">Courses not started yet</span></h3>
-        {{#listgroup flush=true class="mb-5" style="box-shadow: 2px 5px 5px #888888;"}}
+        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">Courses not started yet</span></h4>
+        {{#listgroup flush=true class="mb-5 border-0 rounded-lg shadow-sm" style=" overflow: hidden;"}}
             {{#if notStartedCourses}}
                 {{#each notStartedCourses}}
                     {{> cardItems}}
@@ -43,13 +48,13 @@
         <div class="row">
             <div class="col d-flex align-items-center text-secondary">{{value.title}}</div>
             <div class="col d-flex justify-content-end align-items-center">
-                {{#button  colorType="secondary" outline=true class="border-0 mr-3"}}
+                {{#button  colorType="secondary" outline=true class="border-0 mr-1"}}
                     <span class="fa fas fa-fw fa-eye"></span>
                 {{/button}}
-                {{#button  colorType="success" outline=true class="border-0 mr-3"}}
+                {{#button  colorType="success" outline=true class="border-0 mr-1"}}
                     <span class="fa fas fa-fw fa-edit text-success"></span>
                 {{/button}}
-                {{#button  colorType="danger" outline=true class="border-0 mr-3"}}
+                {{#button  colorType="danger" outline=true class="border-0 mr-1"}}
                     <span class="fa fas fa-fw fa-trash text-danger"></span>
                 {{/button}}
             </div>
