icon buttons color issue on hovering fixed

--- a/imports/ui/pages/myclasses/myClasses.html
+++ b/imports/ui/pages/myclasses/myClasses.html
@@ -62,14 +62,14 @@
         <div class="row">
             <div class="col d-flex align-items-center text-secondary">{{value.title}}</div>
             <div class="col d-flex justify-content-end align-items-center">
-                {{#button size="sm" colorType="secondary" outline=true class="mr-2 course-items-icon-buttons"}}
+                {{#button size="sm" colortype="secondary" outline=true class="mr-2 course-items-icon-buttons"}}
                     <span class="fa fas fa-fw fa-eye"></span>
                 {{/button}}
-                {{#button size="sm"  colorType="success" outline=true class="mr-2 course-items-icon-buttons"}}
-                    <span class="fa fas fa-fw fa-edit text-success"></span>
+                {{#button size="sm"  colortype="success" outline=true class="mr-2 course-items-icon-buttons"}}
+                    <span class="fa fas fa-fw fa-edit"></span>
                 {{/button}}
-                {{#button size="sm" colorType="danger" outline=true class="mr-1 course-items-icon-buttons"}}
-                    <span class="fa fas fa-fw fa-trash text-danger"></span>
+                {{#button size="sm" colortype="danger" outline=true class="mr-1 course-items-icon-buttons"}}
+                    <span class="fa fas fa-fw fa-trash"></span>
                 {{/button}}
             </div>
         </div>
