--- a/imports/ui/pages/myclasses/myClasses.html
+++ b/imports/ui/pages/myclasses/myClasses.html
@@ -1,66 +1,69 @@
 <template name="myClasses">
     {{#onLoaded loaded=componentsLoaded}}
-<!--        {{#each courseCategories}}-->
-<!--            {{text}}-->
-<!--        {{/each}}-->
-
         <div class="row d-flex justify-content-end align-items-center mr-1">
             {{> button data-toggle="modal" data-target="#add-course-modal" label="Add New Course" size="sm" class="add-new-course-button"}}
         </div>
 
-        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">Running Courses</span></h4>
+        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">{{i18n "pages.myClasses.running"}}</span></h4>
         {{#listgroup flush=true class="mb-5 border-0 rounded-lg shadow-sm" style=" overflow: hidden;"}}
             {{#if runningCourses}}
                 {{#each runningCourses}}
                     {{> cardItems}}
                 {{/each}}
             {{else}}
-                {{> item label=noEntries class="d-flex align-items-center"}}
+                {{# item class="d-flex align-items-center"}}
+                    {{i18n "pages.myClasses.notFound"}}
+                {{/item}}
             {{/if}}
         {{/listgroup}}
 
-        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">Completed Courses</span></h4>
+        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">{{i18n "pages.myClasses.completed"}}</span></h4>
         {{#listgroup flush=true class="mb-5 border-0 rounded-lg shadow-sm" style=" overflow: hidden;"}}
             {{#if completedCourses}}
                 {{#each completedCourses}}
                     {{> cardItems}}
                 {{/each}}
             {{else}}
-                {{> item label=noEntries class="d-flex align-items-center"}}
+                {{# item class="d-flex align-items-center"}}
+                    {{i18n "pages.myClasses.notFound"}}
+                {{/item}}
             {{/if}}
         {{/listgroup}}
 
-        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">Courses not started yet</span></h4>
+        <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">{{i18n "pages.myClasses.upcoming"}}</span></h4>
         {{#listgroup flush=true class="mb-5 border-0 rounded-lg shadow-sm" style=" overflow: hidden;"}}
             {{#if notStartedCourses}}
                 {{#each notStartedCourses}}
                     {{> cardItems}}
                 {{/each}}
             {{else}}
-                {{> item label=noEntries class="d-flex align-items-center"}}
+                {{# item class="d-flex align-items-center"}}
+                    {{i18n "pages.myClasses.notFound"}}
+                {{/item}}
             {{/if}}
         {{/listgroup}}
+
+        {{#modal id="add-course-modal" centered=true}}
+            {{>modalheader title="Add Course" dismiss=true}}
+            {{#modalbody}}
+                <div class="form-group">
+                    <label for="course-name" class="col-form-label">Enter Course Name</label>
+                 <input type="text" class="form-control" id="course-name">
+             </div>
+            {{/modalbody}}
+            {{#modalfooter}}
+                {{> button colortype="secondary" label="Close" data-dismiss="modal" }}
+                {{> button colortype="primary" label="Save changes" class="save-changes"}}
+            {{/modalfooter}}
+        {{/modal}}
     {{/onLoaded}}
 
-    {{#modal id="add-course-modal" centered=true}}
-        {{>modalheader title="Add Course" dismiss=true}}
-        {{#modalbody}}
-            <div class="form-group">
-                <label for="course-name" class="col-form-label">Enter Course Name</label>
-                <input type="text" class="form-control" id="course-name">
-            </div>
-        {{/modalbody}}
-        {{#modalfooter}}
-            {{> button colortype="secondary" label="Close" data-dismiss="modal" }}
-            {{> button colortype="primary" label="Save changes" class="save-changes"}}
-        {{/modalfooter}}
-    {{/modal}}
 </template>
 
 <template name="cardItems">
     <li class="list-group-item">
         <div class="row">
-            <div class="col d-flex align-items-center text-secondary">{{value.title}}</div>
+            <div class="col d-flex align-items-center text-secondary">{{title}}</div>
             <div class="col d-flex justify-content-end align-items-center">
                 {{#button size="sm" colortype="secondary" outline=true class="mr-2 course-items-icon-buttons"}}
                     <span class="fa fas fa-fw fa-eye"></span>
