--- a/imports/ui/pages/myclasses/myClasses.html
+++ b/imports/ui/pages/myclasses/myClasses.html
@@ -1,7 +1,9 @@
 <template name="myClasses">
     {{#onLoaded loaded=componentsLoaded}}
         <div class="row d-flex justify-content-end align-items-center mr-1">
-            {{> button data-toggle="modal" data-target="#add-course-modal" label="Add New Course" size="sm" class="add-new-course-button"}}
+            {{# button data-toggle="modal" data-target="#add-course-modal" size="sm" class="add-new-course-button"}}
+                <span>{{i18n "pages.myClasses.addNew"}}</span>
+            {{/button}}
         </div>
 
         <h4><span class="ml-5 badge badge-secondary shadow-sm bg-white text-secondary course-badge">{{i18n "pages.myClasses.running"}}</span></h4>
@@ -37,13 +39,59 @@
             {{/each}}
         {{/listgroup}}
 
-        {{#modal id="add-course-modal" centered=true}}
-            {{>modalheader title="Add Course" dismiss=true}}
+        {{#modal id="add-course-modal" centered=true large=true}}
+            {{>modalheader title="Add Course" dismiss=true class="bg-warning"}}
             {{#modalbody}}
                 <div class="form-group">
                     <label for="course-name" class="col-form-label">Enter Course Name</label>
-                 <input type="text" class="form-control" id="course-name">
-             </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" id="course-name" placeholder="Title">
+                        </div>
+                        <div class="col-md-3">
+                            <input type="date" class="form-control" id="course-name">
+                        </div>
+                        <div class="col-md-3">
+                            <input type="date" class="form-control" id="course-name">
+                        </div>
+                    </div>
+
+                    <label for="course-name" class="col-form-label">Enter participant details</label>
+                    {{#each addField}}
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        {{# button}}
+                                            <i class="fa fa-fw fa-minus"></i>
+                                        {{/button}}
+                                    </div>
+                                    <div class="col-md-10">
+                                        <input type="text" class="form-control" id="course-name" placeholder="Code">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" id="course-name" placeholder="First Name">
+                            </div>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" id="course-name" placeholder="Last Name">
+                            </div>
+                        </div>
+                    {{else}}
+                        {{# item class="d-flex align-items-center"}}
+                            {{i18n "pages.myClasses.notFound"}}
+                        {{/item}}
+                    {{/each}}
+
+                    <div class="row">
+                        <div class="col">
+                            {{# button colortype="danger" class="ml-30" id="addNewParticipant"}}
+                                <i class="fa fa-fw fa-plus"></i>
+                            {{/button}}
+                        </div>
+                    </div>
+                </div>
             {{/modalbody}}
             {{#modalfooter}}
                 {{> button colortype="secondary" label="Close" data-dismiss="modal" }}
