--- a/imports/ui/pages/myclasses/myClasses.html
+++ b/imports/ui/pages/myclasses/myClasses.html
@@ -39,42 +39,72 @@
             {{/each}}
         {{/listgroup}}
 
+<!--        {{> quickForm template="bootstrap4-inline" schema = courseSchema id="insertCourseForm" type="normal"}}-->
+
         {{#modal id="add-course-modal" centered=true large=true}}
             {{>modalheader title="Add Course" dismiss=true class="bg-warning"}}
             {{#modalbody}}
-                {{> quickForm template="bootstrap4-inline" schema = courseSchema id="insertCourseForm" type="normal"}}
-<!--                {{#autoForm template="bootstrap4" schema = courseSchema id="insertCourseForm" type="normal"}}-->
-<!--                    <fieldset>-->
-<!--                        <span>Course Title</span>-->
-<!--                        <div class="row">-->
-<!--                            <div class="col-md-6">-->
-<!--                                {{> afQuickField name='title' }}-->
-<!--                            </div>-->
-<!--                            <div class="col-md-3">-->
-<!--                                {{> afQuickField name='startedAt'}}-->
-<!--                            </div>-->
-<!--                            <div class="col-md-3">-->
-<!--                                {{> afQuickField name='completedAt'}}-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </fieldset>-->
-<!--                    {{> afArrayField name='users'}}-->
-<!--                {{/autoForm}}-->
+                {{#autoForm template="bootstrap4" schema = courseSchema id="insertCourseForm" type="normal"}}
+                    <fieldset>
+                        <span>Course Title</span>
+                        <div class="row">
+                            <div class="col-md-6">
+                                {{> afQuickField name='title' }}
+                            </div>
+                            <div class="col-md-3">
+                                {{> afQuickField name='startedAt'}}
+                            </div>
+                            <div class="col-md-3">
+                                {{> afQuickField name='completedAt'}}
+                            </div>
+                        </div>
+                    </fieldset>
+                    {{> afArrayField name='users'}}
+                {{/autoForm}}
             {{/modalbody}}
             {{#modalfooter}}
                 {{> button colortype="secondary" label="Close" data-dismiss="modal" }}
-                {{> button type="submit" form="insertCourseForm" colortype="primary" label="Save changes" class="save-changes"}}
+                {{> button type="submit" form="insertCourseForm" colortype="primary" label="Insert" class="insert"}}
             {{/modalfooter}}
         {{/modal}}
 
         {{#modal id="edit-course-modal" centered=true large=true}}
             {{>modalheader title="Edit Course" dismiss=true class="bg-success"}}
             {{#modalbody}}
-                {{> quickForm template="bootstrap4-inline" doc= this schema = courseSchema id="editCourseForm" type="update"}}
+<!--                {{> quickForm template="bootstrap4-inline" doc=getClickedCourse  collection=getCollection schema=courseSchema id="editCourseForm" type="normal"}}-->
+                {{#autoForm template="bootstrap4"  doc=getClickedCourse  collection=getCollection schema=courseSchema
+                    id="editCourseForm" type="normal"}}
+                    <fieldset>
+                        <span>Course Title</span>
+                        <div class="row">
+                            <div class="col-md-6">
+                                {{> afQuickField name='title' }}
+                            </div>
+                            <div class="col-md-3">
+                                {{> afQuickField name='startedAt'}}
+                            </div>
+                            <div class="col-md-3">
+                                {{> afQuickField name='completedAt'}}
+                            </div>
+                        </div>
+                    </fieldset>
+                    {{> afArrayField name='users'}}
+                {{/autoForm}}
             {{/modalbody}}
             {{#modalfooter}}
                 {{> button colortype="secondary" label="Close" data-dismiss="modal" }}
-                {{> button colortype="primary" label="Save changes" class="save-changes"}}
+                {{> button type="submit" colortype="primary" label="Save changes" class="save-changes" form="editCourseForm"}}
+            {{/modalfooter}}
+        {{/modal}}
+
+        {{#modal id="delete-course-modal" centered=true}}
+            {{>modalheader title="Delete Course" dismiss=true class="bg-danger"}}
+            {{#modalbody}}
+                <div>Are you sure you want to delete this course? This action cannot be reversed.</div>
+            {{/modalbody}}
+            {{#modalfooter}}
+                {{> button colortype="secondary" label="Close" data-dismiss="modal" }}
+                {{> button type="submit" colortype="primary" label="Delete" class="delete-course-button"}}
             {{/modalfooter}}
         {{/modal}}
     {{/onLoaded}}
@@ -92,7 +122,7 @@
                 {{#button data-toggle="modal" data-target="#edit-course-modal" size="sm"  colortype="success" outline=true class="mr-2 course-items-icon-buttons update-course"}}
                     <span class="fa fas fa-fw fa-edit"></span>
                 {{/button}}
-                {{#button size="sm" colortype="danger" outline=true class="mr-1 course-items-icon-buttons"}}
+                {{#button size="sm" colortype="danger" outline=true class="mr-1 course-items-icon-buttons delete-course-icon"}}
                     <span class="fa fas fa-fw fa-trash"></span>
                 {{/button}}
             </div>
